КОНЕЦ КОНЕЦ КОНЕЦ АААААААААААААААА

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -89,3 +89,14 @@ year=2010,
 pages="448 ñ.",
 language="russian"
 }
+
+
+@book{DSLInAction,
+author="Debasish Ghosh",
+title="DSLs in action",
+publisher="Manning Publications",
+year=2010,
+pages="376 ñ.",
+language="russian"
+}
+
