--- a/main.tex
+++ b/main.tex
@@ -79,7 +79,7 @@ AST& Abstract syntax tree\\
 
 Современные автомобили имеют несколько блоков управления (electronic control unit, ECU), связанных между собой внутри машинной сетью. Эти блоки взаимодействуют между собой через стандартные шинные архитектуры CAN, FlexRay, LIN и Ethernet. С развитием техники количество ECU в автомобильных системах стремительно растет, что приводит к созданию сложных структур сетей. К основным особенностям автомобильного программного обеспечения можно отнести:
 \begin{itemize}
-\item    надежность: в сложной сети ECU в течение всего срока эксплуатации автомобиля автомобильные программные системы должны работать исключительно надежно;
+\itemнадежность: в сложной сети ECU в течение всего срока эксплуатации автомобиля автомобильные программные системы должны работать исключительно надежно;
 \itemфункциональная безопасность: такие функции, как анти блокировочная тормозная система, требуют безотказной работы, что определяет высокие требования к процессам разработки программного обеспечения и к самим программам;
 \itemработа в режиме реального времени: быстрая реакция (от микросекунд до миллисекунд) на внешние события требует оптимизированных операционных систем и особой программной архитектуры;
 \itemминимальное потребление ресурсов: любое дополнение вычислительных ресурсов или памяти увеличивает стоимость продуктов, что при миллионных тиражах выливается в немалые деньги;
@@ -99,12 +99,13 @@ AST& Abstract syntax tree\\
 Практика «разработка через поведение» (behaviour-driven development, BDD) была создана для достижения взаимопонимания между всеми участниками процесса. В сфере автомобильных систем BDD подход сильно облегчать процесс разработки.
 
 
-Данная работа организована следующим образом. В главе \ref{cReview} представлен
-обзор проблемы создания языка для описания тестовых сценариев тестирования автомобильных систем и обзор аналогов. Глава \ref{cDesign} содержит
-описание предлагаемого подхода к непосредственному построению языка. Вопросы его практической
-реализации рассмотрены в главе \ref{cImplementation}. Результаты
-экспериментального исследования его эффективности приведены в главе
-\ref{cExperiments}.
+Данная работа организована следующим образом. 
+В главе \ref{cReview} представлен
+обзор проблемы создания языка для описания тестовых сценариев тестирования автомобильных систем и обзор существующих инструментов для тестирования. 
+Глава \ref{cDesign} содержит содержит общую информацию о тестировании автомобильных систем и описание платформы тестирования.
+В главе \ref{MethodsOfLangDescription} представлено описание предлагаемого подхода к непосредственному построению языка.
+Вопросы его практической реализации рассмотрены в главах \ref{DescriptionOdDevelopedLang} и \ref{cImplementation2}. 
+Результаты экспериментального исследования его эффективности приведены в главе \ref{cExperiments}.
 
 %------------Постановка задачи и обзор литературы -------------------
 \chapter{Обзор литературы и постановка задачи }
@@ -147,9 +148,9 @@ Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диа
 \end{itemize}
 
 
-Одно и то же оборудование, разрабатываемое для разных автомобильных компаний с различной внутренней архитектурой программного обеспечения при тестировании ПО может рассматриваться в качестве «черного ящика». Данное понятие предложил У.Р. Эшби в своей книге «Введение в кибернетику»\cite{Eshby1959}. Под черным ящиком подразумевается объект исследования, внутреннее устройство которого неизвестно. В кибернетических системах оно помогает изучать поведение систем, абстрагируясь от их внутреннего устройства. Такое тестирование называется поведенческим. В этом случае проверяется функциональное поведение объекта с точки зрения внешнего мира. Под этой стратегией понимается создание тестов для тестового набора, основанных на технических требованиях и их спецификациях. Фактически, при поведенческом тестировании известно какой результат должен быть при определенном наборе данных, которые подаются на вход. Проанализировав требования и спецификации тестировщик может легко определить набор тестовых сценариев для проверки различной функциональности тестируемой системы. Принимая тестируемую систему в качестве черного ящика ее можно исследовать, манипулируя входными данными и данными, полученными на выходе. Чтобы лучше понять, как исследуется поведение  ``черного ящика'', предположим что имеется некоторая система управления, внутреннее устройство которой неизвестно для пользователя. Эта система управления имеет входы $X(x_1, x_2, ..., x_n)$ и выходы $Y(y_1, y_2, ..., y_n)$. Способ исследования поведения данной системы заключается в том, что выходы системы зависят от входов системы и времени $t_k, k \in \mathbb{Z}$. При этом величины времени выбираются произвольно (рис. \ref{fblackbox}) .
+Одно и то же оборудование, разрабатываемое для разных автомобильных компаний с различной внутренней архитектурой программного обеспечения при тестировании ПО может рассматриваться в качестве «черного ящика». Данное понятие предложил У.Р. Эшби в своей книге «Введение в кибернетику»\cite{Eshby1959}. Под черным ящиком подразумевается объект исследования, внутреннее устройство которого неизвестно. В кибернетических системах оно помогает изучать поведение систем, абстрагируясь от их внутреннего устройства. Такое тестирование называется поведенческим. В этом случае проверяется функциональное поведение объекта с точки зрения внешнего мира. Под этой стратегией понимается создание тестов для тестового набора, основанных на технических требованиях и их спецификациях. Фактически, при поведенческом тестировании известно какой результат должен быть при определенном наборе данных, которые подаются на вход. Проанализировав требования и спецификации тестировщик может легко определить набор тестовых сценариев для проверки различной функциональности тестируемой системы. Принимая тестируемую систему в качестве черного ящика ее можно исследовать, манипулируя входными данными и данными, полученными на выходе. Чтобы лучше понять, как исследуется поведение «черного ящика», предположим что имеется некоторая система управления, внутреннее устройство которой неизвестно для пользователя. Эта система управления имеет входы $X(x_1, x_2, ..., x_n)$ и выходы $Y(y_1, y_2, ..., y_n)$. Способ исследования поведения данной системы заключается в том, что выходы системы зависят от входов системы и времени $t_k, k \in \mathbb{Z}$. При этом величины времени выбираются произвольно (рис. \ref{fblackbox}) .
 
-\begin{Figure}{Исследование поведения черного ящика''}{fblackbox}
+\begin{Figure}{Исследование поведения черного ящика}{fblackbox}
 {\includegraphics[width=\linewidth]{res/blackBox}}
 \label{fig:image}
 \end{Figure}
@@ -193,10 +194,10 @@ Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диа
 Учитывая, что все системы стандартизированы, одну и ту же систему (например, лидары для автомобилей марок Diamler и Audi) можно протестировать использую одни и те же инструменты. Однако, среди современных средств для тестирования программных систем нет специализированных под специфические нужды автомобильной промышленности, и при этом позволяющих разрабатывать спецификации на человеко-читаемом языке для реализации BDD подхода.
 
 
-С расширением областей применения вычислительной техники возникла необходимость в новых — проблемно-ориентированном языке (domain-specific language, DSL), позволяющем в определенной области использовать специфичные обозначения и термины. Такие языки обеспечивают пользователям возможность коротко и четко сформулировать задачу и получить результаты в необходимой для них форме.
+С расширением областей применения вычислительной техники возникли задачи, которые проще реализовать не программистам, а специалистам в определенной предетной области -- аналитикам. Однако зачастую  аналитики не имеют достаточных знаний в языках программирования общего назначения, либо использование этих языков не удобно из-за большого количества не относящихся к решаемой задаче деталей (управление памятью, низкоуровневые управляющие конструкции и так далее). Для решения этой проблемы возникла идея создавать проблемно-ориентированные языки (domain-specific language, DSL), позволяющие в определенной области использовать специфичные обозначения и термины. Такие языки обеспечивают пользователям возможность коротко и четко сформулировать задачу и получить результаты в необходимой для них форме.
 
 
-Хорошо разработанный DSL язык должен быть основан на следующих принципах (Debasish, G. 2011 DSLs in Action, Manning Publications):
+Хорошо разработанный DSL язык должен быть основан на следующих принципах \cite{DSLInAction}:
 \begin{itemize}
 \itemЯзык зеркально отображает артефакты предметной области.
 \itemЯзык должен использовать общий словарь предметной области. Словарь становится катализатором для лучшей связи между разработчиками и бизнес-пользователями.
@@ -213,7 +214,7 @@ Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диа
 \subsection{Выделение критериев сравнения}
 Требования к разрабатываемой системе
 \begin{itemize}
-\itemАрхитектура тестов, разрабатываемых с помощью языка, должна быть событийно-управляемая (Event based).
+\itemАрхитектура тестов, разрабатываемых с помощью языка, должна быть событийно-управляемая.
 \itemЯзык должен быть проблемно-ориентированным
 \itemЯзык должен позволять использовать BDD подход.
 \end{itemize}
@@ -234,7 +235,7 @@ CAPL - процедурный язык, на котором выполнение блоков программы управляются собы
 
 \item CCDL
 
-Еще одним языком для описания тестовых спецификаций в автомобильной сфере является CCDL. Это язык тестовых спецификаций для тестирования, основанном на требованиях \cite {CCLD}. Предоставляет высокоуровневый язык тестирования. CCDL может использоваться для автоматизированного black box тестирования. Однако, спецификации содержат в себе программный код, непонятный для части бизнес участников (рис. \ref{fccdl}).
+Еще одним языком для описания тестовых спецификаций в автомобильной сфере является CCDL. Это язык тестовых спецификаций для тестирования, основанном на требованиях \cite {CCLD}. Предоставляет высокоуровневый язык тестирования. CCDL может использоваться для автоматизированного black box тестирования. Однако, спецификации содержат в себе программный код, и не предоставляют пользователям в свободной форме описывать тестовые шаги (рис. \ref{fccdl}).
 
 \begin{Figure}[h!]{Тестовый сценарий на языке CCDL}{fccdl}
 {\includegraphics[width=\linewidth]{res/CAPL-EX}}
@@ -260,7 +261,7 @@ Cucumber – это фреймворк, реализующий подход BDD \cite{Cucumber}. В Cucumber для
 \end{itemize}
 
 \subsection{Результаты}
-Из вышеперечисленных инструментов для тестирования ПО видно, что ни один из них не удовлетворяет требованиям. Таким образом существует необходимость в создании domain specific языка для функционального тестирования, который объединит в себе принципы BDD и функционал, необходимый для симуляции работы автомобильных сетей CAN, LIN, Ethernet. Наличие такого языка значительно упростит разработку ПО и повысит качество разрабатываемого продукта.
+Из вышеперечисленных инструментов для тестирования ПО видно, что ни один из них не позволяет описывать тестовые сценарии в свободной форме, при этом предоставляя возможность проверки поведения автомобильных систем на основе работы автомобильных систем. Таким образом существует необходимость в создании предметно-ориентированного языка для функционального тестирования, который объединит в себе принципы BDD и функционал, необходимый для симуляции работы автомобильных сетей CAN, LIN, Ethernet. Наличие такого языка значительно упростит разработку ПО и повысит качество разрабатываемого продукта.
 
 %------------------------Уточненные требования к работе TODO
 \section{Уточненные требования к работе}
@@ -381,17 +382,16 @@ Controller Area Network (сеть контроллеров) -- это стандарт промышленной сети, о
 
 %-------------------------------СИНТАКСИС ЯЗЫКА
 \chapter{Методы описания и реализации проблемно-ориентированных языков}
+\label{MethodsOfLangDescription}
 \section{Описание синтаксиса языка }
 Существуют три основных метода описания синтаксиса языков программирования: формальные грамматики, формы Бэкуса-Наура и диаграммы Вирта.
 
-Формальной грамматикой называется четверка вида: G = (VT, VN, P, S),
+Формальной грамматикой называется четверка вида: $G = (V_T, V_N, P, S)$, где где $V_N$ - конечное множество нетерминальных символов грамматики,
+$V_T$ - множество терминальных символов грамматики
+$Р$ – множество правил вывода грамматики,
+$S$ – начальный символ грамматики.
 
-где где VN - конечное множество нетерминальных символов грамматики,
-VT - множество терминальных символов грамматики
-Р – множество правил вывода грамматики,
-S – начальный символ грамматики.
-
-Для записи правил вывода с одинаковыми левыми частями вида a-> b1, a->b2, ..., a->bn  используется сокращенная форма записи a-> b1|b2|...|bn.
+Для записи правил вывода с одинаковыми левыми частями вида $ a\rightarrow b_1, a\rightarrow b_2, ..., a\rightarrow b_n$  используется сокращенная форма записи $a\rightarrow b_1|b_2|...|b_n$.
 
 %БНФ
 
@@ -508,6 +508,7 @@ S – начальный символ грамматики.
 
 % ------------------------------------------------ГЛАВА Реализационная часть
 \chapter{Описание разрабатываемого языка}
+\label{DescriptionOdDevelopedLang}
 \label{cImplementation}
 %Рекомендуемый объем главы --- 10-30 стр.
 %Название главы должно отражать ее содержание, например  "Архитектура вечного двигателя''.
@@ -522,7 +523,7 @@ S – начальный символ грамматики.
 
 ANTLR4 удобен для работы с AST, является свободным программным обеспечением, предоставляет сообщение об ошибках и восстановление после них, а так же предоставляет плагины для Eclipse и IntelliJ IDEA, что позволяет удобно создавать и отлаживать грамматики. Интерпретатор реализован на языке java.
 
-Описание грамматики в ANTLR4 состоит из правил, описываемых в файлах с расширением \textbf{.g4}.  ANTLR4 позволяет описывать лексемы и синтаксические правила в одном файле грамматики. В этом случае в заголовке файла указывается ключевое слово grammar'' и название грамматики, которое должно совпадать с названием файла, в котором она описывается. Так же генератор позволяет разделять их на файлы, в котором описываются лексемы (заголовок lexer grammar) и синтаксические правила (parser grammar). Второй способ удобнее с точки зрения логического разделения описания лексем и правил. Далее файл, в котором описываются лексемы будем называть лексером, а файл, в котором описываются синтаксические правила лексером.
+Описание грамматики в ANTLR4 состоит из правил, описываемых в файлах с расширением \textbf{.g4}.  ANTLR4 позволяет описывать лексемы и синтаксические правила в одном файле грамматики. В этом случае в заголовке файла указывается ключевое слово grammar и название грамматики, которое должно совпадать с названием файла, в котором она описывается. Так же генератор позволяет разделять их на файлы, в котором описываются лексемы (заголовок lexer grammar) и синтаксические правила (parser grammar). Второй способ удобнее с точки зрения логического разделения описания лексем и правил. Далее файл, в котором описываются лексемы будем называть лексером, а файл, в котором описываются синтаксические правила лексером.
 
 %-------------------------------------ЛЕКСЕР
 \section{Лексический анализатор}
@@ -544,16 +545,16 @@ ANTLR4 удобен для работы с AST, является свободным программным обеспечением, пре
 
 Предположим, что синтаксис разрабатываемого языка будет иметь ключевые слова, по которым можно определить входные и выходные данные, возможность описывать сценарии на языке, привычном пользователю, будь то русский или английский.
 
-В качестве входов системы рассмотрим пакеты данных, отправляемые тестируемому оборудованию, а так же установку значений параметров (частота передачи данных, значения отправляемых сигналов и д.р.). В этом случае входы системы можно разделить на два класса: отправка данных и настройка данных. В таком случае выходами системы будут получаемые с тестируемого оборудования пакеты данных. Данные могут приниматься единожды (UDS пакеты), или же периодически (синхросигналы). Соответственно, представляется логичным разделить их на две большие группы: получение пакетов и данные, которые необходимо проверить в определенный момент времени. В этом случае система управления имеет входы $X(Send_{data}, Set_{data})$ и выходы $Y(Recieve_{data}, Check_{data})$. На рис. \ref{blackBoxKeyWords} в качестве входных и выходных данных черного ящика'' представлены ключевые слова, которыми назовем четыре группы вышеописанных данных.
+В качестве входов системы рассмотрим пакеты данных, отправляемые тестируемому оборудованию, а так же установку значений параметров (частота передачи данных, значения отправляемых сигналов и д.р.). В этом случае входы системы можно разделить на два класса: отправка данных и настройка данных. В таком случае выходами системы будут получаемые с тестируемого оборудования пакеты данных. Данные могут приниматься единожды (UDS пакеты), или же периодически (синхросигналы). Соответственно, представляется логичным разделить их на две большие группы: получение пакетов и данные, которые необходимо проверить в определенный момент времени. В этом случае система управления имеет входы $X(Send_{data}, Set_{data})$ и выходы $Y(Recieve_{data}, Check_{data})$. На рис. \ref{blackBoxKeyWords} в качестве входных и выходных данных «черного ящика» представлены ключевые слова, которыми назовем четыре группы вышеописанных данных.
 
-\begin{Figure}{Тестирование автомобильной системы в качестве черного ящика''}{blackBoxKeyWords}
+\begin{Figure}{Тестирование автомобильной системы в качестве «черного ящика»}{blackBoxKeyWords}
 {\includegraphics[width=\linewidth]{res/blackBoxKeyWords}}
 \label{fig:image}
 \end{Figure}
 
 
 
-Из вышеуказанного можно определить следующий набор ключевых слов с которых должен начинаться любой шаг сценария:  \textbf{Send}, \textbf{Set}, \textbf{Check}, \textbf{Receive}, \textbf{Pause}. При этом ключевые слова должны начинаться с определенного начального символа, обозначающее начало служебного слова. При тестировании программного обеспечения ECU для автомобильных систем наименее вероятно использование символа коммерческое at(  @''), поэтому этот символ будет обозначать ключевые слова.
+Из вышеуказанного можно определить следующий набор ключевых слов с которых должен начинаться любой шаг сценария:  \textbf{Send}, \textbf{Set}, \textbf{Check}, \textbf{Receive}, \textbf{Pause}. При этом ключевые слова должны начинаться с определенного начального символа, обозначающее начало служебного слова. При тестировании программного обеспечения ECU для автомобильных систем наименее вероятно использование символа коммерческое at(@), поэтому этот символ будет обозначать ключевые слова.
 
 %%%%%%%%%%%%%%%%%
 
@@ -596,7 +597,7 @@ fragment S: [sS];
 \textbf{@Recieve} response 6E F1 01 00 01 A5,
 \textbf{@Set} ignition off.
 
-Такая запись не очень удобна с точки зрения восприимчивости теста. Поэтому разумно ввести правило, что каждое правило должно начинаться с новой строки. При этом, чтобы улучшить читабельность тестового сценария должна быть возможность отделять некоторые шаги в логические блоки (например разделить шаги на блоки до выключения'' и после включения'' тестируемого оборудования''). Сделать это можно добавив еще несколько пробелов. Для обозначения новой строки введем лексему \textbf{NewLine} (листинг \ref{lst:lnewLine}). Подробнее правила синтаксического анализа будут рассмотрены в разделе \ref{lParser}.
+Такая запись не очень удобна с точки зрения восприимчивости теста. Поэтому разумно ввести правило, что каждое правило должно начинаться с новой строки. При этом, чтобы улучшить читабельность тестового сценария должна быть возможность отделять некоторые шаги в логические блоки (например разделить шаги на блоки до выключения и после включения тестируемого оборудования). Сделать это можно добавив еще несколько пробелов. Для обозначения новой строки введем лексему \textbf{NewLine} (листинг \ref{lst:lnewLine}). Подробнее правила синтаксического анализа будут рассмотрены в разделе \ref{lParser}.
 
 \lstinputlisting[caption=Лексема новой строки, language=java,  firstline=5,  lastline=6 , label = {lst:lnewLine}]{res/BddLexer.g4}
 
@@ -672,7 +673,7 @@ fragment S: [sS];
 \lstinputlisting[caption= синтаксическое правило текста инструкции, language=java,  firstline=32,      lastline=39 , label={lst:lAnnotationText}]{res/BddParser.g4}
 
 
-Правило для параметра можно описать следующим образом: пользователь должен указать символы, обозначающие начало и конец параметра (в лексере они указаны как квадратные скобки  ['' и  ]''). Внутри скобок находится значение параметра, которое может быть как текстом, так и числом. При этом значение параметра может отсутствовать (листинг \ref{lst:lcustomParameter}).
+Правило для параметра можно описать следующим образом: пользователь должен указать символы, обозначающие начало и конец параметра (в лексере они указаны как квадратные скобки  ``['' и  ``]''). Внутри скобок находится значение параметра, которое может быть как текстом, так и числом. При этом значение параметра может отсутствовать (листинг \ref{lst:lcustomParameter}).
 \lstinputlisting[caption= синтаксическое правило для параметра, language=java,  firstline=27,      lastline=29 , label={lst:lcustomParameter}]
 {res/BddParser.g4}
 
@@ -732,7 +733,7 @@ BddParser.tokens, BddLexer.tokens — это вспомогательные классы, которые содержат
 Введем новые аннотации, названия которых будут совпадать с ключевыми словами: Send, Set, Check и Recieve. С помощью мета-аннотаций @Retention и @Target определим область видимости и цель назначения для новых аннотаций. В листинге \ref{lst:checkAnnotatoin} представлена реализация аннотации для ключевого слова Check: она имеет видимость  во время выполнения и может быть применена к методам. Так же аннотация имеет метод text(), отвечающий за хранение текстовой инструкции. Аннотации Send, Recieve и Set имеют аналогичную реализацию.
 \lstinputlisting[caption=реализация аннотации Check,language=java,  firstline=1,  lastline=6, label={lst:checkAnnotatoin}]{res/CheckAnnotation.txt}
 
-Для описания конечного набора инструкций, необходимых для описания тестовых сценариев введем класс CommandLib.java. Это библиотека пользовательских инструкций, в которой тестировщики должны описать методы, которые позволяют выполнять действия, необходимые для этих инструкций. Предположим, что для тестирования программного обеспечения для автомобильных систем одной из набора заранее обговоренных в команде фраз является фраза Send request [req]''. В этом случае необходимо реализовать метод с аннотацией Send, у которой метод text() возвращает текстовую инструкцию. При этом текстовая инструкция содержит параметр req, который так же необходимо указать в качестве параметра метода. В листинге \ref{lst:SendMethod} представлена реализация данной инструкции.
+Для описания конечного набора инструкций, необходимых для описания тестовых сценариев введем класс CommandLib.java. Это библиотека пользовательских инструкций, в которой тестировщики должны описать методы, которые позволяют выполнять действия, необходимые для этих инструкций. Предположим, что для тестирования программного обеспечения для автомобильных систем одной из набора заранее обговоренных в команде фраз является фраза \emph{Send request [req]}. В этом случае необходимо реализовать метод с аннотацией Send, у которой метод text() возвращает текстовую инструкцию. При этом текстовая инструкция содержит параметр req, который так же необходимо указать в качестве параметра метода. В листинге \ref{lst:SendMethod} представлена реализация данной инструкции.
 
 \lstinputlisting[caption=метод с аннотацией Send,language=java,  firstline=8,  lastline=12, label={lst:SendMethod}]{res/CheckAnnotation.txt}
 
@@ -889,7 +890,7 @@ InstructionIsNotDeclared&Instruction 'request [] in functional addressing mode' 
 
 По мнению автора книги \cite{conceptPL} разработать краткий, но доступный по описанию язык – задача сложная, решение которой необходимо для успешного использования языка. Одной из пролем возникающих во время разработки языка являются несхожие предпочтения конечных пользователей языка. Большинство новых языков тестируются пользователями еще во время разработки.
 
-В качестве респондентов было выбрано 16 человек, занимающихся тестированием программного обеспечения автомобильных систем в компании ООО ''Люксофт профешнл''. Респондентам был представлен пример тестового сценария, рассматриваемого в разделе \ref{lexer}. Их попросили ответить на вопрос ``Оцените степень удобства чтения приведенной ниже тестовой спецификации. Описывали бы вы по возможности тестовые сценарии подобным образом?''. Результаты опроса представлены на рисунке \ref{fig:Opros}.
+В качестве респондентов было выбрано 16 человек, занимающихся тестированием программного обеспечения автомобильных систем в компании ООО «Люксофт профешнл». Респондентам был представлен пример тестового сценария, рассматриваемого в разделе \ref{lexer}. Их попросили ответить на вопрос «Оцените степень удобства чтения приведенной ниже тестовой спецификации. Описывали бы вы по возможности тестовые сценарии подобным образом?». Результаты опроса представлены на рисунке \ref{fig:Opros}. 
 
 \begin{figure}[h!]
 \center{\includegraphics[width=\linewidth]{res/Opros}}
