осправлена ошибка компилятор->интерпретаттор

--- a/main.tex
+++ b/main.tex
@@ -517,7 +517,7 @@ $S$ – начальный символ грамматики.
 %программного продукта.
 
 
-Задача построения языка довольна трудозатратна. Однако существуют программные инструменты, помогающие сделать его меньше и проще. Для этого был разработан следующий инструментарий для создания компиляторов: генераторы лексических анализаторов (сканеров), генераторы синтаксических анализаторов (парсеров), автоматические генераторы кода.
+Задача построения языка довольна трудозатратна. Однако существуют программные инструменты, помогающие сделать его меньше и проще. Для этого был разработан следующий инструментарий для создания компиляторов и интерпретаторов: генераторы лексических анализаторов (сканеров), генераторы синтаксических анализаторов (парсеров), автоматические генераторы кода.
 
 Для реализации языка было выбрано «еще одно средство распознавания языков» ANTLR4 (ANother Tool for Language Recognition). Это генератор нисходящих анализаторов для формальных языков. Он преобразует контекстно-свободную грамматику в форме РБНФ в программу на Java, C++, JavaSript, Go. Python и Go.
 
@@ -711,7 +711,7 @@ fragment S: [sS];
 %-------------------------------Реализация языка
 \chapter{Реализация языка}
 \label{cImplementation2}
-\section{Компилятор}
+\section{Интерпретатор}
 
 
 
@@ -742,7 +742,7 @@ BddParser.tokens, BddLexer.tokens — это вспомогательные классы, которые содержат
 
 За поиск метода, соответствующего тестовому шагу отвечает класс CommandHandler.java. В конструктор этого класса передается ключевое слово, текст инструкции и пользовательская бибилиотека, на основе которых производится поиск метода, аннотированный заданным ключевым словом и имеющего указанную текстовую инструкцию. Главный функционал этого класса предоставляют методы isMethodPresent(), возвращающий булевское значение false, в слечае если подходящего метода не обнаружено, и getMethodConsumer(), возвращающий объект типа Consumer<Boolean>. Функциональный интерфейс  Consumer<T> выполняет некоторое действие над объектом типа T, при этом ничего не возвращая. В getMethodConsumer() с помощью рефлексии указываются параметры метода в соотствествии с параметрами текстовой инфструкции, и на основе полученных данных возвращается объект типа Consumer, который отвечает за выполнение найденного метода с заданными параметрами. 
 
-При обходе абстрактного синтаксического дерева компилятор находит очередную нотированную инструкцию, с помощью рефлексии находит метод, аннотированный соответствующим ключевым словом и добавляет ее в список необходимых для выполнения. При этом инструкция должна быть заранее определена пользователем в библиотеке инструкций. Во время семантического анализа все параметры пользовательских параметров приводятся к типам, объявленным в параметрах метода. Методы инcтрукций могут принимать параметры следующих типов: boolean, byte, short, integer, long, float, double, String, Enum.
+При обходе абстрактного синтаксического дерева интерпретатор находит очередную нотированную инструкцию, с помощью рефлексии находит метод, аннотированный соответствующим ключевым словом и добавляет ее в список необходимых для выполнения. При этом инструкция должна быть заранее определена пользователем в библиотеке инструкций. Во время семантического анализа все параметры пользовательских параметров приводятся к типам, объявленным в параметрах метода. Методы инcтрукций могут принимать параметры следующих типов: boolean, byte, short, integer, long, float, double, String, Enum.
 
 При завершении обхода AST инструкции поочередно выполняются в том порядке, в котором были заданы в тестовой спецификации.
 
