Пофикшено описание лексера

--- a/main.tex
+++ b/main.tex
@@ -534,7 +534,6 @@ ANTLR4 удобен для работы с AST, является свободным программным обеспечением, пре
 \itemПолучить кадр, сигнал или набор данных по UDS протоколу от тестируемого ПО;
 \itemВыполнить паузу между инструкциями, чтобы тестируемое ПО успело сформировать и отправить необходимые данные;
 \itemВыполнять шаги определенное количество раз, т.к. многие системы имеют алгоритмы со счетчиками, которые можно выполнить определенное количество раз. Зачастую значения таких счетчиков измеряются сотнями и даже тысячами шагов. При удачной группировке этих шагов количество строк тестового сценария можно сократить в десятки раз, поместив из в цикл;
-\itemВыполнять определенные действия по событию (триггер);
 \itemУстановить значение отправляемого сигнала;
 \itemПроверить полученное значение сигнала;
 \end{itemize}
@@ -554,7 +553,7 @@ ANTLR4 удобен для работы с AST, является свободным программным обеспечением, пре
 
 
 
-Из вышеуказанного можно определить следующий набор ключевых слов с которых должен начинаться любой шаг сценария:  \textbf{Send}, \textbf{Set}, \textbf{Check}, \textbf{Receive}, \textbf{Pause}. При этом ключевые слова должны начинаться с определенного начального символа, обозначающее начало служебного слова. При тестировании программного обеспечения ECU для автомобильных систем наименее вероятно использование символа коммерческое at(@), поэтому этот символ будет обозначать ключевые слова.
+Из вышеуказанного можно определить следующий набор ключевых слов с которых должен начинаться любой шаг сценария:  \textbf{Send}, \textbf{Set}, \textbf{Check}, \textbf{Receive}, \textbf{Pause}, \textbf{Repeat}. При этом ключевые слова должны начинаться с определенного начального символа, обозначающее начало служебного слова. При тестировании программного обеспечения ECU для автомобильных систем наименее вероятно использование символа коммерческое at(@), поэтому этот символ будет обозначать ключевые слова.
 
 %%%%%%%%%%%%%%%%%
 
@@ -565,11 +564,11 @@ ANTLR4 удобен для работы с AST, является свободным программным обеспечением, пре
 
 fragment S: [sS];
 
-\lstinputlisting[caption=Ключевые слова, language=java,  firstline=26,  lastline=39 , label = {lst:listKeyWords}]{res/BddLexer.g4}
+\lstinputlisting[caption=Лексемы ключевых слов Send, Set, Check, Recieve, language=java,  firstline=26,  lastline=40 , label = {lst:listKeyWords}]{res/BddLexer.g4}
 
 Так как автомобильные системы тестируются в режиме реального времени, в тестовых сценариях необходимо явно оперировать временем. Ответ на запрос приходит не моментально, так же как и не моментально изменяются значения сигналов. Зачастую возникает необходимость проверить значение полученного сигнала несколько раз в определенные промежутки времени. В этом случае между отправкой запроса и получением ответа необходимо установить паузу, в течение которой тестовое оборудование не будет выполнять проверку полученных данных на соответствие ожидаемым данным, описанные в тестовом сценарии. Для реализации этой возможности введем ключевое слово Pause. После данного ключевого слова должно указываться значение $p_n$ такое, что $t_{n+1}=t_n+p_n$. лексемы, необходимые для паузы представлены на листинге \ref{lst:lPause}
 
-\lstinputlisting[caption=Лексемы паузы, language=java,  firstline=8,  lastline=14 , label = {lst:lPause}]{res/BddLexer.g4}
+\lstinputlisting[caption=Лексема паузы, language=java,  firstline=41,  lastline=44 , label = {lst:lPause}]{res/BddLexer.g4}
 
 
 После шага должна идти инструкция, определяемая пользователем языка. Например, если необходимо проверить функцию записи определенных данных в энергонезависимой памяти, нужно реализовать следующий набор шагов тестового сценария:
@@ -597,9 +596,9 @@ fragment S: [sS];
 \textbf{@Recieve} response 6E F1 01 00 01 A5,
 \textbf{@Set} ignition off.
 
-Такая запись не очень удобна с точки зрения восприимчивости теста. Поэтому разумно ввести правило, что каждое правило должно начинаться с новой строки. При этом, чтобы улучшить читабельность тестового сценария должна быть возможность отделять некоторые шаги в логические блоки (например разделить шаги на блоки до выключения и после включения тестируемого оборудования). Сделать это можно добавив еще несколько пробелов. Для обозначения новой строки введем лексему \textbf{NewLine} (листинг \ref{lst:lnewLine}). Подробнее правила синтаксического анализа будут рассмотрены в разделе \ref{lParser}.
+Такая запись не очень удобна с точки зрения восприимчивости теста. Поэтому разумно ввести правило, что каждое правило может начинаться с новой строки. При этом, чтобы улучшить читабельность тестового сценария должна быть возможность отделять некоторые шаги в логические блоки (например разделить шаги на блоки до выключения и после включения тестируемого оборудования).  Для обозначения новой строки введем лексему \textbf{NewLine} (листинг \ref{lst:lnewLine}). Оператор $channel(HIDDEN)$ означает, что при синтаксическом анализе новые строки не учитываются. Подробнее правила синтаксического анализа будут рассмотрены в разделе \ref{lParser}.
 
-\lstinputlisting[caption=Лексема новой строки, language=java,  firstline=5,  lastline=6 , label = {lst:lnewLine}]{res/BddLexer.g4}
+\lstinputlisting[caption=Лексема новой строки, language=java,  firstline=7,  lastline=9 , label = {lst:lnewLine}]{res/BddLexer.g4}
 
 
 
@@ -616,7 +615,7 @@ fragment S: [sS];
 Допустим, пользователи определили следующий ограниченный набор команд: «Отправить запрос ‘запрос’», «Получить ответ ‘ответ’». Очевидно, что инструкция, состоящая из одного лишь параметра не имеет смысла. Так как текст инструкции и параметры формулируются в произвольной форме, то необходимо выделить отдельные лексемы, обозначающие начало и конец параметра. Реализация данных лексем представлена на листинге \ref{lst:lparam}.
 
 
-\lstinputlisting[caption=Лексемы начала и конца параметра, language=java,  firstline=43,  lastline=46 , label={lst:lparam}]{res/BddLexer.g4}
+\lstinputlisting[caption=Лексемы начала и конца параметра, language=java,  firstline=50,  lastline=53 , label={lst:lparam}]{res/BddLexer.g4}
 
 Более того, нет обозначения начала тестового сценария. Так же в тестовой спецификации должна быть краткая информация для каждого сценария, чтобы можно было быстро понять зачем нужно данное испытание.  Для этого введем ключевое слово \textbf{TestCase}, обозначающее начало сценария, после которого должна идти краткая информация.
 Шаги группируются в тестовые сценарии, которых в тестовой спецификации может быть несколько.
